--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -1,5 +1,6 @@
-# API Requirements
-fastapi>=0.104.0
-uvicorn>=0.24.0
-pydantic>=2.0.0
-python-multipart>=0.0.6
+fastapi
+uvicorn
+requests
+pymupdf==1.23.26
+dotenv
+python-multipart
