--- a/.env.dev
+++ b/.env.dev
@@ -1,4 +1,13 @@
 ENV=development
-FRONTEND_ORIGIN=http://localhost:5050
+FRONTEND_ORIGIN=http://localhost:5500
 API_ORIGIN=http://localhost:8080
 MCP_URL=http://mcp:8000/process
+LLM_BACKEND="ollama"
+OLLAMA_MODEL="gemma3:1b"
+OLLAMA_URL="http://host.docker.internal:11434"
+OPENAI_API_KEY=
+OPENAI_MODEL=
+ANTHROPIC_API_KEY=
+ANTHROPIC_MODEL=
+MISTRAL_API_KEY=
+MISTRAL_MODEL=
