--- a/mcp/requirements.txt
+++ b/mcp/requirements.txt
@@ -1,4 +1,13 @@
-fastapi
-uvicorn
-pydantic
+fastapi==0.115.0
+uvicorn[standard]==0.30.6
+pydantic==2.6.4
 dotenv
+requests==2.32.3
+openai
+anthropic
+mistralai
+
+
+
+
+
