update docker for deployment

--- a/.env.dev
+++ b/.env.dev
@@ -5,6 +5,7 @@ MCP_URL=http://mcp:8000/process
 LLM_BACKEND="ollama"
 OLLAMA_MODEL="gemma3:1b"
 OLLAMA_URL="http://host.docker.internal:11434"
+PYTHONPATH=/app
 OPENAI_API_KEY=
 OPENAI_MODEL=
 ANTHROPIC_API_KEY=
